--- a/frontend-dashboard/src/styles.css
+++ b/frontend-dashboard/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; }
+html, body {
+width: 100%;
+max-width: 100%;
+overflow-x: hidden; /* prevent horizontal scroll */
+}
